--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -2,7 +2,7 @@
     "welcome": "欢迎来到 CCTAAL",
     "language": "语言",
     "nav": {
-        "what_we_do": "我们的业务",
+        "what_we_do": "运营架构",
         "business_solutions": "可行性结构",
         "international_trade": "国际项目促进",
         "tech_innovation": "技术与创新",
@@ -149,28 +149,28 @@
         "hero": {
             "label": "机构",
             "title": "历史与起源",
-            "description_intro": "2017年，各大洲之间的顶级运营面临着一个结构性风险：缺乏同时保护双方的机构背书。",
-            "description_context": "尖端技术在农业综合企业中寻求规模。拉美生产寻求全球市场。九位数的固定资本，长周期，双边风险敞口。技术到了却找不到系统性采用。收成到了港口，买家却退出了。\n\n即使交易达成，资本也往往在产生回报之前就已经老化。没有永久使用生态系统的技术变成了废墟。没有融入终端市场的生产失去了相关性。\n\n传统的商业结构无法解决这个问题。咨询公司指出了路径却不承担风险。双边协议保证了交易却没能构建持久性。",
-            "description_solution": "CCTAAL 在巴西利亚成立，旨在作为双边机构担保和持久性架构运作。在这个生态系统中，双方在同一国家背书下通过，受同一跨国政府网络保护，投资资本从技术采用整合到能够吸收体量且无破坏性波动的市场。\n\n从那时起，它就在农业综合企业与先进技术之间的高密度运营跨越大陆和周期的地方运作。我们创造机会，构建治理，并组织环境，确保投资在回报之前不会失去相关性。\n\nCCTAAL 不指路。我们一起穿越。"
+            "description_intro": "2017年，各大洲之间的高层运营面临一个结构性风险：缺乏同时保护双方的机构支持。",
+            "description_context": "尖端技术在拉美农业综合企业中寻求规模。拉美生产者寻求数十亿美元的全球市场。双方都在九位数的固定资本、长周期和双边风险敞口下运作：技术可能到达却找不到采用；收成可能到达港口而买家退出。\n\n但风险不仅仅在于交易。即使操作成行，资本也往往在产生回报之前就已经老化。没有永久使用生态系统的技术变成了废墟。没有与终端市场整合的生产失去了相关性。\n\n传统的商业结构无法解决这个问题。咨询公司指出了路径却不承担风险。双边协议保证了交易却没能构建持久性。",
+            "description_solution": "CCTAAL在巴西利亚成立，旨在作为双边机构担保和持久性架构运作。在这个生态系统中，双方在同一国家背书下通过，受同一跨国政府网络保护，投资资本从技术采用整合到能够吸收体量且无破坏性波动的市场。\n\nCCTAAL团队在跨国机构运营方面积累了三十多年的经验。在Chang Yung Kong的管理下，与国家金融机构和多边组织构建了超过20亿美元的谈判，拥有包括麻省理工学院（MIT）和哈佛商学院（Harvard Business School）两项研究生学历的执行教育背景。\n\n自2017年以来，CCTAAL一直以这一巩固的机构基础运作。三大洲的政府网络。直接接触部长、州长和国家决策者。在机构屏蔽下跨越不同监管制度的运营。\n\nCCTAAL不指路。我们一起穿越。"
         },
         "values": {
             "title": "机构支柱",
             "cards": {
                 "integration": {
-                    "title": "双边机构背书",
-                    "text": "在跨国高密度运营中同时保护双方的国家治理。"
+                    "title": "制度支持与治理",
+                    "text": "CCTAAL充当制度保障结构，在治理、合法性和可预测性的明确参考下组织运营。\n\n我们创造各方在稳定规则、明确责任和长期制度一致性下运营的环境。数十亿美元的运营需要的不仅仅是各方之间的信任：它们需要国家架构，即权利、义务和连续性受到经受住政治变革、经济波动和管理周期考验的结构的保护。\n\n我们充当这种结构。不是作为促进协议的中介，而是作为维持数十年运营的制度支持。当大规模资本跨越大陆和不同的监管制度时，治理不再是一个程序，而成为持久性的基础。"
                 },
                 "innovation": {
-                    "title": "持久性生态系统",
-                    "text": "完整的结构，使技术和生产在长周期内保持相关性。"
+                    "title": "技术、生产与市场的整合",
+                    "text": "创新只有在找到真正的采用和可持续的需求时才会产生价值。\n\nCCTAAL构建先进技术、农业工业生产和终端市场之间的融合，确保资本、创新和规模以一体化的方式移动。没有找到永久使用系统的尖端技术变成了没有回报的固定资本。不与吸收市场整合的规模生产面临破坏性的波动。\n\n我们构建完整的生态系统。从前沿技术的投资决策到数十以亿计规模市场的稳定吸收。资本、创新和需求在同一制度架构下融合，受到保护免受系统性老化和供应链中断的影响。投资不仅仅发生：它在各个周期中通过保持相关性。"
                 },
                 "transparency": {
-                    "title": "跨国顶级网络",
-                    "text": "接触州长、部长和全球经济领袖。十亿级运营所需的对话层级。"
+                    "title": "公共-私营与跨国衔接",
+                    "text": "国际运营需要的不仅仅是贸易协定。\n\nCCTAAL在跨国制度网络中衔接企业、投资者和公共机构，减少不对称、运营风险和监管中断。直接接触三大洲的部长、州长和国家决策者。这是通过三十年经济外交行动建立的网络，不是通过贸易活动，而是通过经受住危机、政治过渡和经济重组考验的结构化运营。\n\n大规模资本不通过机构演示来运作。它通过真正接触那些做出国家决策的人来运作。我们在这一层级运作。这种衔接不依赖于政治周期，因为它是建立在积累的制度信誉之上，而不是短暂的个人关系。当监管壁垒威胁数十亿美元的运营时，直接接触制定公共政策的人并非差异化因素：它是最低生存基础设施。"
                 },
                 "diplomacy": {
-                    "title": "实时风险情报",
-                    "text": "对市场、技术和法规的结构性监测。在波动环境中的明智决策。"
+                    "title": "持久性与运营连续性",
+                    "text": "CCTAAL不仅仅是促进交易，更是在构建持久性。\n\n我们构建经受住经济、技术和地缘政治周期考验的关系和制度环境，保护投资价值直到获得回报。长期资本运营在决策和结果之间跨越数年。在此期间，技术老化，法规变化，市场重新定义，政府更迭。传统的商业结构保证了交易，但不保证资本在产生回报之前保持相关性。\n\nCCTAAL构建持久性。不是作为承诺，而是作为在真实波动下运行数十年的经过测试的制度架构。在超过20亿美元的跨国运营中积累了经验，经受住了金融危机、政治破裂和技术过渡。在我们的治理下跨越的投资不依赖于理想情况：即使世界在周围重新定义，它也可以受保护地运营。"
                 }
             }
         },
@@ -276,37 +276,37 @@
             "button": "申请分析"
         },
         "services": {
-            "import_export": {
-                "title": "进出口",
-                "description": "我们促进对外贸易业务，确保产品进入和退出国际市场整个过程的效率、合规性和安全性。"
+            "risk_mgmt": {
+                "title": "风险管理与大宗商品情报",
+                "description": "与拉美最大的大宗商品风险管理平台建立战略合作伙伴关系。该结构每天监控全球市场，分析影响价格形成、预测和波动性的变量。通过期货、期权和场外衍生品为农业大宗商品固定资本在决策和执行之间跨越数月的运营提供复杂的对冲工具。"
             },
-            "customs": {
-                "title": "海关管理",
-                "description": "我们协调货物的清关工作，确保完全符合法律规定，最大限度地减少整个海关流程中的风险、延误和成本。"
+            "transnational_gov": {
+                "title": "跨国治理结构",
+                "description": "为跨越多个监管制度的运营提供机构屏蔽。与各部委、多边机构和主权金融机构进行协调。为在不同司法管辖区运作的资本构建合规性、合同治理和监管情报。"
             },
-            "advisory": {
-                "title": "国际咨询",
-                "description": "为寻求全球扩张的企业提供专业咨询，专注于市场分析、进入策略和监管合规。"
+            "market_intel": {
+                "title": "市场情报与系统性风险分析",
+                "description": "对影响跨国运营的汇率波动、地缘政治紧张局势和监管变化进行结构性监控。在误差幅度为零时，进行情景分析、交易对手映射和识别运营窗口，以做出明智决策。"
             },
-            "prospecting": {
-                "title": "供应商开发",
-                "description": "我们识别并认证可靠的国际供应商，确保谈判中的质量、竞争力和透明度。"
+            "public_private": {
+                "title": "公私协调",
+                "description": "直接接触三大洲的州长、部长和国家决策者。这是一个历经三十年建立的网络，适用于那些监管壁垒、外交紧张局势或政治破裂可能摧毁数十亿固定资本的运营。"
             },
-            "missions": {
-                "title": "考察与展会",
-                "description": "我们推广并参与连接拉美企业与新市场的全球活动，激发创新与合作关系。"
+            "high_volume": {
+                "title": "大批量运营结构",
+                "description": "为体量跨越数百万吨和数十亿资本的农业大宗商品（大豆、玉米、咖啡、糖、蛋白质）跨国运营提供治理。双边机构背书同时保护生产者和买家，从源头到最终目的地。"
             },
-            "visa": {
-                "title": "中国商务签证",
-                "description": "我们协助前往中国的商务人士获取签证，通过敏捷的流程处理所有文件和领事手续。"
+            "tech_permanence": {
+                "title": "农业综合企业中的技术持久性",
+                "description": "应用于农业（人工智能、机器人、自动化）的前沿技术投资的治理架构。构建结构使创新中的固定资本在周期中保持相关性，防止系统性过时和市场中断。"
             },
-            "consolidation": {
-                "title": "货物拼箱",
-                "description": "我们将来自不同产地的货物统一为单批货物，降低物流成本，使运输更加敏捷高效。"
+            "financial_access": {
+                "title": "获得资本与金融工具",
+                "description": "与金融机构协调农业信贷、投资工具 (FIAgro) 和长期资本结构。融资跨越收获、技术周期和波动利率制度的运营需要的不仅仅是信贷：它们需要屏蔽的金融架构。"
             },
-            "feasibility": {
-                "title": "可行性研究",
-                "description": "我们分析进口的技术和财务可行性，提供精确数据以指导安全和战略性的决策。"
+            "operational_ecosystem": {
+                "title": "运营持久性生态系统",
+                "description": "从技术采用到最终市场吸收的完全整合。资本、创新和需求在同一机构治理下融合的结构。不只是发生的运营：它们在数十年内保持相关性。"
             }
         }
     },
@@ -360,6 +360,14 @@
             "organics": {
                 "title": "有机产品",
                 "description": "超越技术合规的国际认证。可持续性在商业规模上运作的治理。"
+            },
+            "protein": {
+                "title": "Animal Protein",
+                "description": "Access to global demanding markets. Health and halal certification, diplomatic articulation, and cold chain logistics for high-value protein."
+            },
+            "cotton": {
+                "title": "Cotton",
+                "description": "Lint standard and HVI quality assurance. Operations connecting Brazilian producers to the global textile industry."
             }
         },
         "cta": {
